[gd_scene load_steps=13 format=3 uid="uid://d0hfr5kal628d"]

[ext_resource type="Texture2D" uid="uid://c5hujp84t6qx7" path="res://sprites/pizzeria.jpg" id="1_i3pa6"]
[ext_resource type="Script" path="res://scripts/night.gd" id="1_nqmyo"]
[ext_resource type="Theme" uid="uid://bxdxtp0w0k1ev" path="res://themes/room.tres" id="3_mwc0c"]
[ext_resource type="PackedScene" uid="uid://261wy5615xo3" path="res://scenes/animatronic.tscn" id="4_6fl5u"]
[ext_resource type="Resource" uid="uid://c0ktdeeqfi226" path="res://resources/frederico.tres" id="5_6457a"]
[ext_resource type="Script" path="res://scripts/icons.gd" id="6_ldny8"]
[ext_resource type="PackedScene" uid="uid://2r6otgmkap7h" path="res://scenes/security.tscn" id="6_lmonm"]
[ext_resource type="Resource" uid="uid://d3yjkgjh6dbyj" path="res://resources/marcia.tres" id="6_ubkaf"]
[ext_resource type="PackedScene" uid="uid://can50os8g1v82" path="res://scenes/animatronic_icon.tscn" id="7_2reew"]
[ext_resource type="Theme" uid="uid://b4c40bsjnj7ua" path="res://themes/main_menu.tres" id="9_iqm81"]
[ext_resource type="Theme" uid="uid://dnu7ch56lmkis" path="res://themes/icons.tres" id="10_kbts5"]
[ext_resource type="AudioStream" uid="uid://c1ojo1404l67h" path="res://audio/Haunted Tape-2 - Night Theme.mp3" id="12_xmq4f"]

[node name="Night" type="Node2D"]
script = ExtResource("1_nqmyo")

[node name="MapSprite" type="Sprite2D" parent="."]
position = Vector2(349.547, 324.25)
scale = Vector2(1.04159, 1.041)
texture = ExtResource("1_i3pa6")

[node name="Rooms" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ClassicShowStage" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 287.0
offset_top = 113.0
offset_right = 295.0
offset_bottom = 121.0
scale = Vector2(21.7403, 4.6928)
theme = ExtResource("3_mwc0c")

[node name="DiningArea" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 254.0
offset_top = 154.0
offset_right = 262.0
offset_bottom = 162.0
scale = Vector2(36.2917, 15.4922)
theme = ExtResource("3_mwc0c")

[node name="Backstage" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 161.0
offset_top = 138.0
offset_right = 169.0
offset_bottom = 146.0
scale = Vector2(9.48022, 9.12724)
theme = ExtResource("3_mwc0c")

[node name="Funtime Bunker" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 37.0
offset_top = 190.0
offset_right = 45.0
offset_bottom = 198.0
scale = Vector2(13.7707, 12.9247)
theme = ExtResource("3_mwc0c")

[node name="ShipsCove" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 172.0
offset_top = 237.0
offset_right = 180.0
offset_bottom = 245.0
scale = Vector2(8.86494, 7.86016)
theme = ExtResource("3_mwc0c")

[node name="Bathrooms" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 558.0
offset_top = 155.0
offset_right = 566.0
offset_bottom = 163.0
scale = Vector2(5.11387, 14.4883)
theme = ExtResource("3_mwc0c")

[node name="Safe Room" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 548.0
offset_top = 84.0
offset_right = 556.0
offset_bottom = 92.0
scale = Vector2(7.90386, 7.37132)
theme = ExtResource("3_mwc0c")

[node name="Alleyway" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 213.0
offset_top = 1.0
offset_right = 221.0
offset_bottom = 9.0
scale = Vector2(49.0515, 8.51561)
theme = ExtResource("3_mwc0c")

[node name="LeftHall" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 257.0
offset_top = 281.0
offset_right = 265.0
offset_bottom = 289.0
scale = Vector2(3.38919, 18.7356)
theme = ExtResource("3_mwc0c")

[node name="SupplyRoom" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 200.0
offset_top = 309.0
offset_right = 208.0
offset_bottom = 317.0
scale = Vector2(6.72862, 6.31912)
theme = ExtResource("3_mwc0c")

[node name="RightHall" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 464.0
offset_top = 281.0
offset_right = 472.0
offset_bottom = 289.0
scale = Vector2(3.38919, 18.7356)
theme = ExtResource("3_mwc0c")

[node name="Kitchen" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 519.0
offset_top = 290.0
offset_right = 527.0
offset_bottom = 298.0
scale = Vector2(8.91211, 8.57476)
theme = ExtResource("3_mwc0c")

[node name="SpareRoom1" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 579.0
offset_top = 371.0
offset_right = 587.0
offset_bottom = 379.0
scale = Vector2(11.2744, 12.5397)
theme = ExtResource("3_mwc0c")

[node name="SpareStorage1" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 622.0
offset_top = 328.0
offset_right = 630.0
offset_bottom = 336.0
scale = Vector2(5.46309, 5.06322)
theme = ExtResource("3_mwc0c")

[node name="SpareStand1" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 672.0
offset_top = 384.0
offset_right = 680.0
offset_bottom = 392.0
scale = Vector2(2.80476, 8.34885)
theme = ExtResource("3_mwc0c")

[node name="SpareStage1" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 589.0
offset_top = 473.0
offset_right = 597.0
offset_bottom = 481.0
scale = Vector2(9.01967, 1.91907)
theme = ExtResource("3_mwc0c")

[node name="SpareRoom2" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 36.0
offset_top = 350.0
offset_right = 44.0
offset_bottom = 358.0
scale = Vector2(15.7388, 16.5084)
theme = ExtResource("3_mwc0c")

[node name="SpareStorage2" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 99.0
offset_top = 307.0
offset_right = 107.0
offset_bottom = 315.0
scale = Vector2(5.96337, 4.95978)
theme = ExtResource("3_mwc0c")

[node name="SpareStand2" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 15.0
offset_top = 392.0
offset_right = 23.0
offset_bottom = 400.0
scale = Vector2(2.28007, 7.6571)
theme = ExtResource("3_mwc0c")

[node name="SpareStage2" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 49.0
offset_top = 485.0
offset_right = 57.0
offset_bottom = 493.0
scale = Vector2(13.0781, 3.3575)
theme = ExtResource("3_mwc0c")

[node name="LeftPartyRoom" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 228.0
offset_top = 433.0
offset_right = 236.0
offset_bottom = 441.0
scale = Vector2(11.132, 10.4546)
theme = ExtResource("3_mwc0c")

[node name="MediocreStand" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 191.0
offset_top = 435.0
offset_right = 199.0
offset_bottom = 443.0
scale = Vector2(4.3715, 9.95925)
theme = ExtResource("3_mwc0c")

[node name="RightPartyRoom" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 431.0
offset_top = 433.0
offset_right = 439.0
offset_bottom = 441.0
scale = Vector2(11.132, 10.4546)
theme = ExtResource("3_mwc0c")

[node name="Rockband" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 523.0
offset_top = 434.0
offset_right = 531.0
offset_bottom = 442.0
scale = Vector2(3.84729, 7.35256)
theme = ExtResource("3_mwc0c")

[node name="GameArea" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 319.0
offset_top = 467.0
offset_right = 327.0
offset_bottom = 475.0
scale = Vector2(13.7484, 14.9938)
theme = ExtResource("3_mwc0c")

[node name="RichBank" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 226.0
offset_top = 540.0
offset_right = 234.0
offset_bottom = 548.0
scale = Vector2(9.20116, 7.72891)
theme = ExtResource("3_mwc0c")

[node name="PartsServices" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 451.0
offset_top = 539.0
offset_right = 459.0
offset_bottom = 547.0
scale = Vector2(8.49338, 7.40954)
theme = ExtResource("3_mwc0c")

[node name="Nightmare Storage" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 548.0
offset_top = 504.0
offset_right = 556.0
offset_bottom = 512.0
scale = Vector2(16.2113, 15.9042)
theme = ExtResource("3_mwc0c")

[node name="ToyShowStage" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 329.0
offset_top = 590.0
offset_right = 337.0
offset_bottom = 598.0
scale = Vector2(11.3113, 4.18583)
theme = ExtResource("3_mwc0c")

[node name="TheOffice" type="Button" parent="Rooms"]
layout_mode = 0
offset_left = 339.0
offset_top = 308.0
offset_right = 347.0
offset_bottom = 316.0
scale = Vector2(8.42782, 8.44165)
theme = ExtResource("3_mwc0c")

[node name="Animatronics" type="Node" parent="."]

[node name="Frederico" parent="Animatronics" instance=ExtResource("4_6fl5u")]
animatronic_data = ExtResource("5_6457a")

[node name="Marcia" parent="Animatronics" instance=ExtResource("4_6fl5u")]
animatronic_data = ExtResource("6_ubkaf")

[node name="Icons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 733.0
offset_top = 90.0
offset_right = 773.0
offset_bottom = 130.0
scale = Vector2(9.68394, 10.494)
script = ExtResource("6_ldny8")
icons_texture_size_limit = Vector2(32, 32)

[node name="VBoxContainer" type="VBoxContainer" parent="Icons"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 20.0
alignment = 1

[node name="Animatronic1Icon" parent="Icons/VBoxContainer" instance=ExtResource("7_2reew")]
layout_mode = 2

[node name="Animatronic2Icon" parent="Icons/VBoxContainer" instance=ExtResource("7_2reew")]
layout_mode = 2

[node name="Security" parent="." instance=ExtResource("6_lmonm")]

[node name="NightTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TimeLabel" type="Label" parent="."]
offset_left = 829.0
offset_top = 25.0
offset_right = 869.0
offset_bottom = 48.0
scale = Vector2(3.51282, 3.51282)
theme = ExtResource("9_iqm81")
text = "12:00"

[node name="StressGauge" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 852.0
offset_top = 540.0
offset_right = 892.0
offset_bottom = 580.0
scale = Vector2(1.32492, 1.32492)

[node name="VBoxContainer" type="VBoxContainer" parent="StressGauge"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StressGaugeLabel" type="Label" parent="StressGauge/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_iqm81")
text = "Stress Gauge"

[node name="StressGaugeProgressBar" type="ProgressBar" parent="StressGauge/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("10_kbts5")

[node name="ThemeAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_xmq4f")
volume_db = -10.0
pitch_scale = 0.5
autoplay = true

[connection signal="timeout" from="NightTimer" to="." method="night_timer_timeout"]
